# AI_PGM

0622/: hello.py  readme.md
0626/: readme.md  string.py
0629/: forEX01.py  forEX02.py  forEx03.py  fuc.py  funcEX01.py  korean file.txt  readme.md  readme2.md  stdio.py
0701/: Class01.py  copyEX01.py  mod01.py  mod02.py  readme.md
0706/: readme.md
0706/SmartNotePro/: main.py
0706/SmartNotePro/core/: app_state.py
0706/SmartNotePro/editor/: bold_italic_underline.py  editor.py
0706/SmartNotePro/ui/: font_dialog.py  main_window.py  menu_bar.py  side_bar.py  status_bar.py  tool_bar.py
0706/pythonWorkplace/: brick_breaker.py  car.py  circle.py  cli_Calcurator.py  dice.py  gui_Calcurator.py  memo.py  paint.py  poly.py  rectangle.py  television.py
0707/: readme.md
0707/0707 python/: Num_py.py  Pan_file.py  Pan_sor.py  ml.py  ml_02.py  titanic_pd.py
0707/source_1/: 프로그램 사용법.hwp
0707/source_1/ch3/: 3-1.py  3-2.py
0707/source_1/ch4/: 4-5.py
0707/source_1/ch5/: 5-1.py  5-2.py  5-5.py  5-6.py  5-7.py
0713/: Intel7th 정성욱.hwpx  readme.md  readme2.md
0713/0713 python/: AI_PGM_TEST.py  Mat_plot.py  Ten_flow.py  test.py
0720/py312/: 01-first-model.ipynb  1234.ipynb  gugudan.py  gugufn.py  main.py  pyproject.toml
