[project]
name = "py312"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.3.0",
    "jupyterlab>=4.6.1",
    "keras>=3.15.0",
    "matplotlib>=3.11.1",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "tensorflow>=2.21.0",
]
